base/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deltahouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deltahouse
  template:
    metadata:
      labels:
        app: deltahouse
    spec:
      containers:
        - name: deltahouse
          image: ghcr.io/vehagn/deltahouse
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
