base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deltahouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deltahouse
  template:
    spec:
      containers:
        - name: deltahouse
          image: ghcr.io/vehagn/deltahouse
          imagePullPolicy: Always
#          env:
#            - name: JAVA_TOOL_OPTIONS
#              value: '-Dspring.profiles.active=local-h2'
          ports:
            - name: web
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
#          volumeMounts:
#            - name: config
#              mountPath: /config
#            - name: hass-configuration
#              mountPath: /config/configuration.yaml
#              subPath: configuration.yaml
#      volumes:
#        - name: config
#          persistentVolumeClaim:
#            claimName: hass-config-pvc
#        - name: hass-configuration
#          configMap:
#            name: hass-configuration
