base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: deltahouse
spec:
  entryPoints:
    - websecure
  routes:
    - match: ''
      kind: Rule
      services:
        - name: deltahouse
          port: 8080
